API calls still working but content is not rendering to page

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,12 +1,12 @@
-.card-group {
+/* .card-group {
     content-visibility: hidden;
 }
 
 .card-group-visible {
     content-visibility: visible;
-}
+} */
 
-.float-start {
+/* .float-start {
     position: right;
     content-visibility: hidden;
 }
@@ -31,4 +31,4 @@
 
 #clear-history {
     background-color: rgb(102, 125, 133);
-}
+} */
